Add Impact Trigger and Longshot particles